syntax = "proto3";

package calculator;

service CalculatorService {

    //Unary API
    rpc Sum (SumRequest) returns (SumResponse) {};

    // Streaming API
    rpc DecomposePrimeNumber (DecomposePrimeNumberRequest) returns (stream DecomposePrimeNumberResponse) {};

    // Client Streaming API
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // BiDi Streaming API
    rpc GetMax (stream GetMaxRequest) returns (stream GetMaxResponse) {};
}

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 result = 1;
}

message DecomposePrimeNumberRequest {
    int32 input = 1;
}

message DecomposePrimeNumberResponse {
    int32 result = 1;
}

message ComputeAverageRequest {
    int32 input = 1;
}
message ComputeAverageResponse {
    float result = 1;
}

message GetMaxRequest {
    int32 input = 1;
}

message GetMaxResponse {
    int32 result = 1;
}
